# NeteaseMusic-C-API

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: crypto.h  netease_api.h  request.h
scripts/: rmbuild.bat
src/: crypto.c  netease_api.c  request.c
unit_test/: basic_api_call.c  basic_eapi.c
